fixes featured and all projects sections on small screens

--- a/index.css
+++ b/index.css
@@ -330,7 +330,7 @@ li {
 
   .regular-thumb {
     width: 25vw;
-    height: 16vw;
+    height: 100%;
   }
 
   .info {
@@ -377,18 +377,6 @@ li {
     padding: 100px 0px 20px 0px;
   }
 
-  .all-projects {
-    width: 100%;
-    margin: 0;
-  }
-
-  .info {
-    width: 100%;
-    padding: 100px 0px 20px 0px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
   .featured-item {
     width: 100%;
     background: white;
@@ -412,6 +400,7 @@ li {
 
   .all-projects {
     width: 100%;
+    margin: 0;
     padding: 100px 0px 0px 0px;
   }
 
@@ -441,5 +430,10 @@ li {
     padding: 10px 0px;
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+
+  .info {
+    width: 100%;
+    padding: 100px 0px 20px 0px;
   }
 }
